--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -14,7 +14,7 @@
   </mat-form-field>
   <mat-form-field appearance="fill" class="example-form-field">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="datepicker2" placeholder="起始" [(ngModel)]="start" name="start">
+    <input matInput [matDatepicker]="datepicker2" placeholder="起始" [(ngModel)]="end" name="end">
     <mat-datepicker-toggle matSuffix [for]="datepicker2"></mat-datepicker-toggle>
     <mat-datepicker #datepicker2>
       <mat-datepicker-actions>
